--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "modulework/routework",
     "description": "A basic RESTful router for PHP",
-    "type": "module",
+    "type": "modulework-module",
     "license": "Apache 2.0",
     "authors": [
         {
